--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "socketio": "^1.0.0",
+    "sqlite3": "^5.1.6"
   }
 }
