--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cross": "^1.0.0",
     "ejs": "^3.1.9",
+    "engine.io": "^6.5.4",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
+    "socket.io": "^4.7.2",
     "socketio": "^1.0.0",
     "sqlite3": "^5.1.6"
   }
